--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@
 @font-face {
     font-family: CalSans;
     font-display: swap;
-    src: url("/fonts/CalSans-SemiBold.woff") format("woff"), url("/fonts/CalSans-SemiBold.woff2") format("woff");
+    src: url("../fonts/CalSans-SemiBold.woff") format("woff"), url("../fonts/CalSans-SemiBold.woff2") format("woff2");
     font-weight: 500,600;
     font-style: normal;
 }
